##Text encoding: utf-8

2011-11-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: add a window class for 3d views.
	* goffice/gogchem3dapp.cc: implement load data.
	* goffice/gogchem3dapp.h: fixed class declaration.
	* goffice/gogchem3dwin.cc: add a window class for 3d views.
	* goffice/gogchem3dwin.h: ditto.
	* goffice/plugin.xml.in: support chemical/x-xyz at the print level.

2011-11-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcrystalapp.cc: fixed various issues in component.
	* libs/gcr/application.cc: ditto.
	* libs/gcr/document.cc: ditto.

2011-11-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: don't duplicate applications.
	* libs/gcu/chem3ddoc.cc: moved string to/from display mode here.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: more work for the goffice plugin.
	* libs/gcugtk/chem3dwindow.h: ditto.
	* programs/3d/main.cc: moved string to/from display mode to gcu library.
	* programs/3d/window.cc: ensure Quit menu item presence.

2011-11-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: start working on 3d viewer support in the goffice
	component.
	* goffice/gchemutils-priv.h: ditto.
	* goffice/gchemutils.cc: ditto.
	* goffice/gogchem3dapp.cc: ditto.
	* goffice/gogchem3dapp.h: ditto.
	* libs/gcu/structs.h: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/chem3dapplication.cc: ditto.
	* libs/gcugtk/chem3dapplication.h: ditto.
	* libs/gcugtk/chem3dview.cc: ditto.
	* libs/gcugtk/chem3dview.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/chem3dwindow.h: ditto.
	* programs/3d/application.cc: ditto.
	* programs/3d/application.h: ditto.
	* programs/3d/document.cc: ditto.
	* programs/3d/main.cc: ditto.
	* programs/3d/view.cc: ditto.
	* programs/3d/view.h: ditto.
	* programs/3d/window.cc: ditto.
	* programs/3d/window.h: ditto.

2011-11-01  Jean Bréfort  <jean.brefort@normalesup.org>