@@ -114,9 +114,22 @@ go_gchemutils_component_set_data (GOComponent *component)
 {
 	GOGChemUtilsComponent *gogcu = GO_GCHEMUTILS_COMPONENT (component);
 	if (!gogcu->application) {
-		if (gogcu->type == gcu::ContentTypeUnknown)
+		if (gogcu->type == gcu::ContentTypeUnknown) {
 			gogcu->application = Apps[component->mime_type];
-		else
+			gogcu->type = gogcu->application->GetContentType ();
+			switch (gogcu->type) {
+			case gcu::ContentType2D:
+			default:
+				component->resizable = false;
+				component->snapshot_type = GO_SNAPSHOT_SVG;
+				break;
+			case gcu::ContentType3D:
+			case gcu::ContentTypeCrystal:
+				component->resizable = true;
+				component->snapshot_type = GO_SNAPSHOT_PNG;
+				break;
+			}
+		} else
 			gogcu->application = Apps[gcu_content_type_as_string (gogcu->type)];
 		if (!gogcu->application)
 			return;
@@ -161,10 +174,11 @@ go_gchemutils_component_edit (GOComponent *component)
 static void
 go_gchemutils_component_mime_type_set (GOComponent *component)
 {
-	if (!strcmp (component->mime_type, "application/x-gcrystal")) {
+/*	if (!strcmp (component->mime_type, "application/x-gcrystal") ||
+	    (!strcmp (component->mime_type, "chemical/x-xyz")) {
 		component->resizable = true;
 		component->snapshot_type = GO_SNAPSHOT_PNG;
-	}
+	}*/
 }
 
 static void
